<resources>
    <string name="app_name">Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="cost_numbers">
        <item>ノーマル　　</item>
        <item>レア　　　　</item>
        <item>スーパーレア</item>
    </string-array>
    <string-array name="ability">
        <item>何も能力がないが、故に強い</item>
        <item>バトル前に一度相手に自分の攻撃力の半分(小数点以下切り捨て)のダメージを与える(ただし「先制攻撃」で相手の体力を0にはできない)</item>
        <item>自分のモンスターが攻撃したターンの終わりに、相手に1ダメージ与える(ダメージは毎ターン+1される)</item>
        <item>自分のモンスターが攻撃されたターンの終わりに、自分の体力を1回復する</item>
        <item>相手の攻撃で自分のモンスターの体力が0になる時、一度だけ体力1で耐える</item>
        <item>自分のモンスターが相手に攻撃されたとき、相手に1ダメージ与える</item>
        <item>相手の能力は無効化される</item>
    </string-array>
    <string-array name="ability_title">
        <item>能力なし</item>
        <item>先制攻撃(コスト4)</item>
        <item>猛毒(コスト3)</item>
        <item>自己再生(コスト2)</item>
        <item>くいしばり(コスト5)</item>
        <item>トゲ(コスト2)</item>
        <item>ガチンコ勝負(コスト3)</item>
    </string-array>
    <string name="menu">メニュー</string>
    <string name="tutorial">このゲームについての説明</string>
    <string name="battle">コンピューターと対戦</string>
    <string name="card_list">カード一覧</string>
    <string name="deck_make">デッキ一覧</string>
    <string name="name">名前</string>
    <string name="attack">攻撃力</string>
    <string name="hp">耐久力</string>
    <string name="speed">素早さ</string>
    <string name="rank">ランク</string>
    <string name="ability">能力</string>
    <string name="name_hint">モンスター名を入力してください</string>
    <string name="back">戻る</string>
    <string name="save">保存</string>
    <string name="cost_now">残り使用可能コスト</string>
    <string name="monster_change">カードイラスト変更</string>
    <string name="decision">決定</string>
    <string name="ok">はい</string>
    <string name="no">いいえ</string>
    <string name="next">次へ</string>
    <string name="my_card">自分のカード</string>
    <string name="comp_card">相手のカード</string>
    <string name="battled_monster">このカードはバトル済みです</string>
    <string name="battle_end">バトルを終わる</string>
    <string name="monster_win">はバトルに勝利した！</string>
    <string name="monster_lose">はバトルに敗北した…</string>
    <string name="player_win">あなたの勝ち！</string>
    <string name="player_lose">あなたの敗け…</string>
    <string name="cost_over_dialog">コストが上限を超えています。このままでは保存できません。</string>
    <string name="cost_under_dialog">使用できるコストが残っています。このまま保存してよろしいですか？</string>
    <string name="save_completed">保存が完了しました</string>
    <string name="next_card_make">続けてカードを作る</string>
    <string name="back_card_list">カード一覧に戻る</string>
    <string name="back_deck_list">デッキ一覧に戻る</string>
    <string name="new_make">新規作成</string>
    <string name="deck_name">デッキ名</string>
    <string name="deck_name_hint">デッキ名を入力してください</string>
    <string name="rank1">ランク1</string>
    <string name="rank2">ランク2</string>
    <string name="rank3">ランク3</string>
    <string name="select_card">カードを選択する</string>
    <string name="new_deck">新規デッキ</string>
    <string name="deck_non_dialog">まだデッキが完成していません</string>
    <string name="next_deck_make">続けてデッキを作る</string>
    <string name="back_main_manu">メニューに戻る</string>
    <string name="select_card_battle">バトルに出すカードを選んでください</string>
    <string name="next_deck_remake">このデッキをまだ編集する</string>
    <string name="now">現在</string>
    <string name="win">勝</string>
    <string name="lose">敗</string>
    <string name="draw_display">分</string>
    <string name="select_deck_battle">バトルに使うデッキを選択してください</string>
    <string name="select_deck_remake">編集するデッキを選択してください</string>
    <string name="select_card_deck_make">デッキに入れるカードを選択してください</string>
    <string name="select_card_remake">編集するカードを選択してください</string>
    <string name="you_win">あなたの勝ち！</string>
    <string name="you_lose">あなたの負け…</string>
    <string name="delete">削除</string>
    <string name="delete_deck_completed">デッキの削除が完了しました</string>
    <string name="delete_card_completed">カードの削除が完了しました</string>
    <string name="delete_card_alert">このカードを使用しているデッキも同時に削除されますがよろしいですか？</string>
    <string name="draw">引き分け</string>
    <string name="card_illust">使いたいイラストを選択してください</string>
    <string name="tutorial_card">【カードについて】\n\n・カードには「ノーマル」「レア」「スーパーレア」の3種類があり、それぞれにコストの上限が10,15,20と設定されています。\n・各カードの初期ステータスは攻撃・体力・スピードがそれぞれ1です。\n・攻撃は+1ごとに2コスト、体力とスピードは+1ごとに1コスト消費します。\n・カードには能力を付与することができ、能力ごとに必要コストは違います。\n</string>
    <string name="tutorial_deck">【デッキについて】\n\n・各プレイヤーは3枚のカードを1つのデッキとして使用します。\n・デッキは、「ノーマル」「レア」「スーパーレア」のカードをそれぞれ1枚ずつ採用します。\n</string>
    <string name="tutorial_battle">【バトルについて】\n\n・バトルは3フェイズで行われます。各フェイズでプレイヤーはデッキから1枚のカードを選択します。その際相手のカードをすべて見ることができます。\n・各フェイズでは、カードのスピードが高い方が先攻となり、その攻撃力分、相手カードの体力を削ります。\n・そのフェイズで相手の体力を先に0にしたカードが勝利となり、3フェイズ中に勝利した回数が多い方が最終勝者となります。\n・3フェイズ中に勝利したフェイズが多い方が、最終的な勝者となります。</string>
</resources>